# cmake-examples

./: .gitmodules  README.md
a-lib/: README.md  compile_commands.json
a-lib/adder/: CMakeLists.txt  add.h
cmake-basic/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  example
examples/: CMakeLists.txt  config.h.in  main.cpp
examples/MathFunctions/: mysqrt.cpp
hello-headers/: CMakeLists.txt
hello-headers/src/: main.cpp
make/: README.md  out
submodules/: .gitignore  CMakeLists.txt  README.md  configure.sh  main.cpp  run.sh
submodules/adder/: add.cpp
two-src-files/: CMakeLists.txt  README.md  add.cpp  main.cpp
